--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "inacho/php-credit-card-validator",
+    "name": "imaddev/php-credit-card-validator",
     "type": "library",
     "description": "Validates popular debit and credit cards numbers against regular expressions and Luhn algorithm. Also validates the CVC and the expiration date",
     "keywords": ["creditcard", "creditcards", "debit", "credit", "card", "cards", "validator", "cvc", "laravel"],
@@ -8,6 +8,10 @@
         {
             "name": "Ignacio de Tomás",
             "email": "nacho@inacho.es"
+        },
+        {
+            "name": "Imad",
+            "email": "imadbdev@gmail.com"
         }
     ],
     "require": {
